Update CSS to fix up spacing on index page

--- a/styles/index.css
+++ b/styles/index.css
@@ -6,9 +6,9 @@ li {
   padding: 0;
   font-size: 24px;
 }
-/* body {
-  padding-top: 60px;
-} */
+body {
+  padding-top: 40px;
+}
 
 ul {
   list-style: none;
@@ -88,6 +88,10 @@ ul {
   font-size: 36px;
   color: white;
   font-family: cursive;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .image-container .main-image {
